Fix guttering misalignment

--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,7 @@ header nav {
 
   .main-header,
   nav {
-    grid-template-columns: 3rem repeat(6, minmax(0, 1fr)) 3rem;
+    grid-template-columns: 1rem repeat(6, minmax(0, 1fr)) 1rem;
   }
 
   section,
@@ -244,7 +244,7 @@ header nav {
 
   .main-header,
   nav {
-    grid-template-columns: 4.5rem repeat(6, minmax(0, 1fr)) 4.5rem;
+    grid-template-columns: 4rem repeat(6, minmax(0, 1fr)) 4rem;
   }
 
   .portfolio {
@@ -260,7 +260,7 @@ header nav {
 @screen lg {
   .main-header,
   nav {
-    grid-template-columns: 8rem repeat(6, minmax(0, 1fr)) 8rem;
+    grid-template-columns: 4rem repeat(6, minmax(0, 1fr)) 4rem;
   }
 
   main > header > nav {
@@ -288,7 +288,7 @@ header nav {
 
   .main-header,
   nav {
-    grid-template-columns: 12rem repeat(6, minmax(0, 1fr)) 12rem;
+    grid-template-columns: 2vw repeat(6, minmax(0, 1fr)) 2vw;
   }
 
   .layout {
